--- a/templates/assignment_view_teacher.html
+++ b/templates/assignment_view_teacher.html
@@ -73,7 +73,7 @@
                         </td>
                         <td>
                             {% if student[3] is not none %}
-                                <a href="{{ url_for('grade_submission', course_code=course_code, assignment_id=assignment_id, submission_id=student[3]) }}" 
+                                <a href="{{ url_for('grade_submission', course_code=course_code, assignment_id=assignment_id, submission_id=student[3], student_id = student[2]) }}" 
                                     class="btn btn-success btn-sm">
                                     <i class="fas fa-check"> Grade</i> 
                                 </a>
