--- a/templates/new_password.html
+++ b/templates/new_password.html
@@ -28,9 +28,9 @@
   <div class="card">
         <p><strong>Please enter your new password. </strong></p>
 
-        <form>
-          <input type="new" class="form-control" name="email" placeholder="New Password*" required>
-          <input type="confirm" class="form-control" name="email" placeholder="Confirm New Password*" required>
+        <form method="POST">
+          <input type="password" class="form-control" name="new_password" placeholder="New Password*" required>
+          <input type="password" class="form-control" name="confirm_password" placeholder="Confirm New Password*" required>
             <button type="submit">Confirm</button>
         </form>
   </div>
