--- a/templates/forgot_password.html
+++ b/templates/forgot_password.html
@@ -26,7 +26,7 @@
 
 <div class="email-form">
 <p><strong>Enter your user account's email address and we will send you a password reset link.</strong></p>
-        <form>
+        <form method="POST" action="{{ url_for('forgot_password') }}">
           <input type="email" class="form-control" name="email" placeholder="Email address*" required>
             <button type="submit">Enter</button>
         </form>
