--- a/templates/announcement_view_student.html
+++ b/templates/announcement_view_student.html
@@ -7,19 +7,19 @@
     <div class="announcements-list">
         {% if announcements %}
             {% for announcement in announcements %}
-            <a href="{{ url_for('announcement_student', course_code=course_code, course_name=course_name, announcement_id=announcement[0]) }}" class="announcement-link">
+            <a href="{{ url_for('announcement_student', course_code=course_code, course_name=course_name, announcement_id=announcement[0], title = announcement[-1]) }}" class="announcement-link">
                 <div class="announcement-item">
                     <div class="announcement-header">
                         <h4>
-                            {{ announcement[0].split('_')[1] }}
-                            {% if announcement[3] %}
+                            {{ announcement[-1]}}
+                            {% if announcement[2] %}
                             <i class="fas fa-paperclip" style="margin-left: 8px; color: #6c757d;"></i>
                             {% endif %}
                         </h4>
-                        <span class="announcement-date">Posted: {{ announcement[3] }}</span>
+                        <span class="announcement-date">Posted: {{ announcement[2] }}</span>
                     </div>
                     <div class="announcement-content">
-                        <p>{{ announcement[2]|truncate(200) }}</p>
+                        <p>{{ announcement[1]|truncate(200) }}</p>
                     </div>
                 </div>
             </a>
