Just course_grades_student part remained for cleaning and edit mail and pictures part

--- a/templates/course_grades_student.html
+++ b/templates/course_grades_student.html
@@ -52,7 +52,7 @@
                     {% for grade in grades %}
                     <tr>
                         <td>{{ grade[0] }}</td>
-                        <td>{{ grade[4] }} ({{ grade[5] }})</td>
+                        <td>{{ course_name }} ({{ course_code }})</td>
                         <td>{{ grade[1] }}</td>
                         <td>{{ grade[2] }}</td>
                         <td>{{ grade[3].strftime('%B %d, %Y') }}</td>
